Fixed storage left placement on mobiles + cleaning

--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ header {
 
 .main__section {
     display: grid;
-    grid-template-rows: 5fr 2fr 2fr;
+    grid-template-rows: 4fr 1fr 1fr;
 }
 
 .storage {   
@@ -66,10 +66,6 @@ header {
     display: inline-block;
     margin-top: 1rem;
     padding: 2em;
-}
-
-.storage__message {
-    text-align: center;
 }
 
 progress {
@@ -100,7 +96,26 @@ progress {
     border-radius: 1em;
     color: hsl(229, 7%, 55%);
     display: inline-block;
-    padding: 2em;
+    padding: 1em 1.5em;
+    
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-column-gap: 1em;
+}
+
+.storage__left_col {
+    align-self: center;
+    text-transform: uppercase;
+    font-weight: bolder;
+}
+
+.storage__left_big__number {
+    color: black;
+    font-size: 2rem;
+} 
+
+.storage__message {
+    text-align: center;
 }
 
 @media (min-width: 1100px) {
@@ -148,22 +163,8 @@ progress {
         grid-column: 4/-2;
         grid-row: 1/3;
 
-        display: grid;
-        grid-template-columns: auto auto;
-        grid-column-gap: 1em;
         margin-right: 2rem;
         padding: 1em;
-    }
-
-    .storage__left_col {
-        align-self: center;
-        text-transform: uppercase;
-        font-weight: bolder;
-    }
-
-    .storage__left_big__number {
-        color: black;
-        font-size: 2rem;
     }
 
     .storage__message {
